applets/appmenu: set sourceMenu in Compact mode

Since 5f18319f3bf15c5d92321473850b3fbae6a2f5b5, the global menu does
some reshuffling of the menus to make the search function work properly,
and resets m_currentMenu to m_sourceMenu when the menu hides. The
problem is that for the compact (single-button) menu widget style, we
never set m_sourceMenu in the first place (as it's otherwise
unnecessary without the search function that's only available in the
full width version), so we set the menu to null. This means that if you
show the menu then click away, it can't open again (as the underlying
menu is gone) until the menu is regenerated (typically by focusing a
different window, then going back to the original one).

Instead, also set the sourceMenu in the compact style.

BUG: 516207


(cherry picked from commit 2511c372d3922378d7f1ba8bf8c8fe230855e528)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>